[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/Main.tres" type="Theme" id=1]
[ext_resource path="res://scenes/option_slider/OptionSlider.gd" type="Script" id=2]

[node name="HSplitContainer" type="HSplitContainer"]
margin_top = 40.0
margin_right = 500.0
margin_bottom = 72.0
theme = ExtResource( 1 )
dragger_visibility = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
title = "Title"
initial_value = 70

[node name="Label" type="Label" parent="."]
margin_right = 290.0
margin_bottom = 32.0
rect_min_size = Vector2( 290, 0 )
text = "Title"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 302.0
margin_top = 4.0
margin_right = 500.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
max_value = 100.0
step = 10.0
value = 70.0
[connection signal="mouse_entered" from="." to="." method="_on_HSplitContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_HSplitContainer_mouse_exited"]
[connection signal="focus_entered" from="HSlider" to="." method="_on_HSlider_focus_entered"]
[connection signal="focus_exited" from="HSlider" to="." method="_on_HSlider_focus_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
